--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-body {
-  display: flex;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
